crates/bitnet-common/tests/snapshots/snapshot_tests__error_validation_display.snap
---
source: crates/bitnet-common/tests/snapshot_tests.rs
expression: "format!(\"{err}\")"
---
Validation error: tensor shape mismatch for output.weight
