crates/bitnet-common/tests/snapshots/snapshot_tests__kernel_backend_all_variants.snap
---
source: crates/bitnet-common/tests/snapshot_tests.rs
expression: debug
---
[
    "CpuRust",
    "Cuda",
    "Hip",
    "OneApi",
    "CppFfi",
]
