crates/bitnet-common/tests/snapshots/snapshot_tests__kernel_backend_display_variants.snap
---
source: crates/bitnet-common/tests/snapshot_tests.rs
expression: displays
---
[
    "cpu-rust",
    "cuda",
    "cpp-ffi",
]
