crates/bitnet-common/tests/snapshots/snapshot_tests__kernel_capabilities_cpu_avx2.snap
---
source: crates/bitnet-common/tests/snapshot_tests.rs
assertion_line: 77
expression: caps
---
KernelCapabilities {
    cpu_rust: true,
    cuda_compiled: false,
    cuda_runtime: false,
    hip_compiled: false,
    hip_runtime: false,
    oneapi_compiled: false,
    oneapi_runtime: false,
    opencl_compiled: false,
    opencl_runtime: false,
    oneapi_compiled: false,
    oneapi_runtime: false,
    cpp_ffi: false,
    vulkan_compiled: false,
    vulkan_runtime: false,
    simd_level: Avx2,
}
