crates/bitnet-common/tests/snapshots/snapshot_tests__kernel_simd_level_all_variants.snap
---
source: crates/bitnet-common/tests/snapshot_tests.rs
expression: debug
---
[
    "Scalar",
    "Sse42",
    "Avx2",
    "Avx512",
    "Neon",
]
