crates/bitnet-common/tests/snapshots/snapshot_tests__matmul_shapes_batched_valid.snap
---
source: crates/bitnet-common/tests/snapshot_tests.rs
expression: result
---
[
    2,
    3,
    5,
]
