crates/bitnet-common/tests/snapshots/snapshot_tests__matmul_shapes_mismatch_error.snap
---
source: crates/bitnet-common/tests/snapshot_tests.rs
expression: "format!(\"{err}\")"
---
matmul shape mismatch: a has 3 columns but b has 4 rows
