crates/bitnet-common/tests/snapshots/snapshot_tests__pool_stats_after_clear.snap
---
source: crates/bitnet-common/tests/snapshot_tests.rs
expression: stats
---
PoolStats {
    hits: 0,
    misses: 1,
    pooled_bytes: 0,
    active_bytes: 0,
}
